# zmqd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FetchDeps.cmake
src/: main.cpp
